--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,12 @@
             android:layout_marginLeft="40dp"
 
             app:srcCompat="@drawable/jcu" />
+
+        <Button
+            android:id="@+id/button_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
     </RelativeLayout>
 
     <GridLayout
@@ -44,6 +50,8 @@
         <!-- Row 1 -->
 
         <!-- Column 1 -->
+
+        <!-- Column 2 -->
         <android.support.v7.widget.CardView
             android:id="@+id/Attendance"
             android:layout_width="0dp"
@@ -82,7 +90,6 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- Column 2 -->
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
