--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -27,7 +27,10 @@
         android:id="@+id/button_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginEnd="8dp"
+        android:text="Log out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <GridLayout
         android:id="@+id/mainGrid"
@@ -54,7 +57,7 @@
 
         <!-- Column 2 -->
         <android.support.v7.widget.CardView
-            android:id="@+id/Attendance"
+            android:id="@+id/attend_admin"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -110,6 +113,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/create_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -118,7 +122,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Student"
+                    android:text="Add User"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
