--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             app:srcCompat="@drawable/jcu" />
 
         <Button
-            android:id="@+id/button_logout"
+            android:id="@+id/logout_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button" />
