--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -95,6 +95,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/add_user"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
