--- a/app/src/main/res/layout/activity_all_records.xml
+++ b/app/src/main/res/layout/activity_all_records.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".all_records">
 
+    <ListView
+        android:id="@+id/records_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
